--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-shairport-sync (2.6-1ubuntu1~precise1) precise; urgency=low
+shairport-sync (2.6-1ubuntu1~trusty1) precise; urgency=low
 
   [ Chris Boot ]
   * Initial release. (Closes: #743638)
 
   [ dan carter ]
   * Build for precise.
-    systemv, no soxr, and patch for older libconfig
+    systemv
 
  -- dan carter <dantheperson@gmail.com>  Mon, 21 Dec 2015 22:44:18 +1300
