--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,7 @@ shairport-sync (2.6-1ubuntu1~trusty1) precise; urgency=low
   * Initial release. (Closes: #743638)
 
   [ dan carter ]
-  * Build for precise.
+  * Build for trusty.
     systemv
 
  -- dan carter <dantheperson@gmail.com>  Mon, 21 Dec 2015 22:44:18 +1300
