--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-shairport-sync (2.6-1ubuntu1~trusty1) precise; urgency=low
+shairport-sync (2.6-1ubuntu1~trusty1) trusty; urgency=low
 
   [ Chris Boot ]
   * Initial release. (Closes: #743638)
