--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.6-1ubuntu1~trusty2) trusty; urgency=low
+
+  * correct series
+
+ -- dan carter <dantheperson@gmail.com>  Tue, 22 Dec 2015 01:20:15 +1300
+
 shairport-sync (2.6-1ubuntu1~trusty1) trusty; urgency=low
 
   [ Chris Boot ]
