--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.7.4-0ubuntu1~precise1) precise; urgency=low
+
+  * New development release 2.7.4 
+
+ -- dan carter <dantheperson@gmail.com>  Tue, 22 Dec 2015 22:37:34 +1300
+
 shairport-sync (2.6-1ubuntu1~precise1) precise; urgency=low
 
   [ Chris Boot ]
