--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.7.6-0ubuntu1~trusty1) trusty; urgency=low
+
+  * New development release 2.7.6
+
+ -- dan carter <dantheperson@gmail.com>  Sat, 09 Jan 2016 12:24:49 +1300
+
 shairport-sync (2.7.4-0ubuntu1~trusty1) trusty; urgency=low
 
   * New development release 2.7.4
