--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+shairport-sync (2.7.6-0ubuntu1~precise1) precise; urgency=low
+
+  * New development release 2.7.6
+  * Remove init script path patch, now that propert fix is accepted upstream
+
+ -- dan carter <dantheperson@gmail.com>  Sat, 09 Jan 2016 12:31:40 +1300
+
 shairport-sync (2.7.4-0ubuntu1~precise1) precise; urgency=low
 
   * New development release 2.7.4 
