--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.8.0-0ubuntu1~trusty) trusty; urgency=low
+
+  * New release 2.8.0
+
+ -- dan carter <dantheperson@gmail.com>  Tue, 16 Feb 2016 23:34:26 +1300
+
 shairport-sync (2.7.6-0ubuntu1~trusty1) trusty; urgency=low
 
   * New development release 2.7.6
