--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+shairport-sync (2.8.3-0ppa1) wily; urgency=low
+
+  * Upstream release 2.8.3 
+
+ -- dan carter <dantheperson@gmail.com>  Mon, 25 Apr 2016 20:31:37 +1200
+
+shairport-sync (2.8.1-0ppa2) wily; urgency=low
+
+  * Rebuild to include arm architecture
+
+ -- dan carter <dantheperson@gmail.com>  Sun, 27 Mar 2016 18:13:26 +1300
+
 shairport-sync (2.8.1-0ppa1) wily; urgency=low
 
   * Upstream release 2.8.1
