--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.8.3-0ppa1~trusty) trusty; urgency=low
+
+  * Upstream release 2.8.3
+
+ -- dan carter <dantheperson@gmail.com>  Mon, 25 Apr 2016 20:35:06 +1200
+
 shairport-sync (2.8.1-0ppa1~trusty) trusty; urgency=low
 
   * Upstream release 2.8.1
