--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+shairport-sync (2.8.5-0ppa1) yakkety; urgency=low
+
+  * Upstream release 2.8.5 
+
+ -- dan carter <dantheperson@gmail.com>  Wed, 12 Oct 2016 11:19:02 +1300
+
+shairport-sync (2.8.4-0ppa2) yakkety; urgency=low
+
+  * Disable pulseaudio module
+
+ -- dan carter <dantheperson@gmail.com>  Mon, 13 Jun 2016 23:32:50 +1200
+
 shairport-sync (2.8.4-0ppa1) yakkety; urgency=low
 
   * Upstream release 2.8.4 
