--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (2.8.6-0ppa1) yakkery; urgency=low
+
+  * Upstream release 2.8.6
+
+ -- dan carter <dantheperson@gmail.com>  Fri, 09 Dec 2016 23:56:09 +1300
+
 shairport-sync (2.8.5-0ppa1) yakkety; urgency=low
 
   * Upstream release 2.8.5 
