--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shairport-sync (3.0.2-0ppa1~trusty) trusty; urgency=low
+
+  * Upstream release 3.0.2
+
+ -- dan carter <dantheperson@gmail.com>  Mon, 15 May 2017 23:22:17 +1200
+
 shairport-sync (2.8.6-0ppa1~trusty) trusty; urgency=low
 
   * Upstream release 2.8.6
